Removed transform transition - too buggy on mobile

--- a/cards/event_card.css
+++ b/cards/event_card.css
@@ -77,7 +77,7 @@ div.event-card {
     transition: left 0.5s ease-in, margin-bottom 0.5s ease-in, top 0.5s ease-in, max-height 0.5s ease-in, opacity 0.5s ease-in, transform 0.5s ease-in;
     left: 0%;
     opacity: 1;
-    max-height: 200%;
+    max-height: 100%;
     transform: scaleY(1);
     transform-origin: top;
 }
@@ -87,7 +87,7 @@ div.event-card.accepted {
     max-height: 0%;
     opacity: 0;
     margin-bottom: -20px;
-    transform: scaleY(0);
+    /*transform: scaleY(0);*/
 }
 
 div.event-card.rejected {
@@ -95,6 +95,6 @@ div.event-card.rejected {
     max-height: 0%;
     opacity: 0;
     margin-bottom: -20px;
-    transform: scaleY(0);
+    /*transform: scaleY(0);*/
 }
 
